[project]
name = "yolact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pycocotools>=2.0.11",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
